# quackey

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: USAGE_GUIDE.md
src/: account.rs  config.rs  error.rs  logger.rs  main.rs  storage.rs  ui.rs
